# my-cheap-intern

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/skills/intern-reader/: SKILL.md
docs/: 2026-04-01-my-cheap-intern-design.md
docs/superpowers/plans/: 2026-04-01-my-cheap-intern.md
manual/: getting-started-zh.md  getting-started.md
src/intern/: __init__.py  cli.py
src/intern/common/: models.py
src/intern/sdk/: api.py  client.py
src/intern/server/: analysis.py  app.py  db.py  mcp_server.py
src/intern/server/routes/: ingest.py  query.py
src/intern/server/static/: style.css
src/intern/server/templates/: base.html  project_list.html  run_detail.html  run_list.html
src/intern/skills/intern-logger/: SKILL.md
src/intern/skills/intern-reader/: SKILL.md
tests/: conftest.py  test_analysis.py  test_boundaries.py  test_concurrent.py  test_db.py  test_delete_cascade.py  test_ingest.py  test_mcp.py  test_mcp_auth.py  test_mcp_streamable_http.py  test_panel.py  test_query.py  test_sdk.py  test_sdk_resilience.py
