[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-cheap-intern"
version = "0.1.0"
description = "AI-native experiment tracking for ML researchers"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pydantic>=2.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "mcp[cli]",
]
dev = [
    "pytest",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/intern"]
artifacts = ["src/intern/skills/**/*.md"]

[project.scripts]
intern-server = "intern.server.app:main"
intern-cli = "intern.cli:main"
